--- a/styles/style.css
+++ b/styles/style.css
@@ -116,29 +116,37 @@ nav {
 .mobile-menu-btn img {
   width: 1.5rem;
 }
+@keyframes mobile-menu-animation {
+  from {
+    right: -100%;
+  }
+  to {
+    right: 0;
+  }
+}
 
 .mobile-menu {
-  display: flex;
+  display: none;
   flex-direction: column;
   position: fixed;
   background-color: var(--thirdcolor);
-  right: -200%;
+  right: -100%;
   top: 0;
   width: 70dvw;
   height: 100vh;
   list-style-type: none;
   box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.1);
   padding: 2rem;
-  transition: all 0.5s linear;
   z-index: 30;
   gap: 1rem;
+  animation: mobile-menu-animation 0.5s ease-in forwards;
 }
 
 #toggle-menu-controller {
   display: none;
 }
 #toggle-menu-controller:checked ~ .mobile-menu {
-  right: 0;
+  display: flex;
 }
 #toggle-menu-controller:checked ~ #mobile-menu-close-trigger {
   display: block;
@@ -514,6 +522,7 @@ nav {
 .register-photo {
   height: 80dvh;
   flex: 1;
+  align-self: flex-start;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -855,8 +864,9 @@ ol {
   text-decoration: none;
 }
 
-figure.group-photo {
+.group-photo-figure {
   background-color: white;
+  color: var(--primarycolor);
   width: 30dvw;
   float: right;
   box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.1);
@@ -876,8 +886,9 @@ figure.group-photo {
     transform: transformY(0);
   }
 }
-.group-photo-small {
+.group-photo-img {
   border-radius: 10px 10px 0px 0px;
+  border: 1px solid var(--primarycolor);
   width: 100%;
   aspect-ratio: 16/9;
   object-fit: cover;
